--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ body{
         place-content: center;
     }
     section{
-        height: 200vh;
+        height: 400vh;
         width: 100%;
         border: 1px solid;
     }
@@ -131,7 +131,6 @@ body{
     .features{
         height: 70vh;
         width: 100%;
-        border: 1px solid;
         display: grid;
         place-content: center;
     }
@@ -145,15 +144,71 @@ body{
     .features_key{
         height: 50vh;
         width: 95vw;
-        border: 1px solid;
         background-color: white;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
     }
     .key_features{
-        height: 30vh;
+        height: 40vh;
         width: 18vw;
         border: 1px solid gray;
+    }
+    .features_img{
+        text-align: center;
+    }
+    .features_img>img{
+        height: 8vh;
+        width: 5vw;
+    }
+    .key_features_heading{
+        color: #01447a;
+        text-align: center;
+        font-weight: 600;
+    }
+    .why_choose_us{
+        height: 100vh;
+        width: 100%;
+        display: grid;
+        place-content: center;
+    }
+    .why_img{
+        height: 93vh;
+        width: 96vw;
+        background-image: url("images/background\ car.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: grid;
+        place-content: center;
+    }
+    .why_heading{
+        text-align: center;
+    }
+    .heading_1{
+        color: #01447a;
+        font-size: 28px;
+        font-weight: 600;
+    }
+    .why_reasons{
+        height: 23vh;
+        width: 80vw;
+        margin-top: 320px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .reasons{
+        height: 10vh;
+        width: 12vw;
+        text-align: center;
+        align-content: center;
+    }
+    .reasons>i{
+        color: #f97316;
+    }
+    .reasons>p{
+        color: #01447a;
+        font-weight: 600;
     }
 }
