--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ body{
         place-content: center;
     }
     section{
-        height: 600vh;
+        height: 740vh;
         width: 100%;
         border: 1px solid;
     }
@@ -341,13 +341,11 @@ body{
         height: 80vh;
         width: 100%;
         align-content: center;
-        border: 1px solid black;
         background: linear-gradient( to right , #355adb, #4a78e7, #6495ed);
     }
     .Testimonials_heading{
         text-align: center;
         color: white;
-        border: 1px solid black;
         font-size: 28px;
         font-weight: 700;
     }
@@ -355,7 +353,6 @@ body{
         text-align: center;
         color: #f97316;
         font-size: 24px;
-        border: 1px solid black;
     }
     .Testimonials_info{
         height: 60vh;
@@ -363,7 +360,6 @@ body{
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        border: 1px solid black;
     }
     .Testimonials_info>div{
         height: 40vh;
@@ -371,5 +367,244 @@ body{
         border-radius: 10px 10px 10px 10px;
         border: 2px solid white;
         background-color: #c4d7f91a;
+    }
+    .Testimonials_info_heading{
+        height: 7vh;
+        width: 100%;
+        display: flex;
+    }
+    .Testimonials_info_heading>p{
+        font-size: 38px;
+        color: #f97316;
+        margin-left: 10px;
+    }
+    .Testimonials_info_heading>img{
+        height: 8vh;
+        width: 3.6vw;
+        border: 1px solid;
+        border-radius: 30px 30px 30px 30px;
+        margin-left: 150px;
+        margin-top: -22px;
+    }
+    .banner{
+        height: 80vh;
+        width: 100%;
+        display: grid;
+        place-content: center;
+    }
+    .banner_img{
+        height: 78vh;
+        width: 98vw;
+        background-image: url("images/side\ view\ of\ a\ porche.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        align-content: center;
+    }
+    .banner_title{
+        width: 60vw;
+        color: white;
+        font-size: 24px;
+        font-weight: 700;
+        margin-left: 20px;
+    }
+    .banner_title>span{
+        color: #f97316;
+    }
+    .banner_info{
+        height: 15vh;
+        width: 40vw;
+        border: 1px solid white;
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+    .banner_img>a{
+        display: inline-block;
+        text-align: center;
+        height: 6vh;
+        width: 10vw;
+        background-color: #f97316;
+        color: white;
+        border-radius: 5px 5px 5px 5px;
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+    .questions{
+        height: 80vh;
+        width: 100%;
+        display: grid;
+        place-content: center;
+    }
+    .questions_img{
+        height: 76vh;
+        width: 97vw;
+        background-image: url("images/questions.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        align-content: center;
+    }
+    .questions_heading{
+        text-align: center;
+        font-weight: 700;
+        color: #01447a;
+        font-size: 24px;
+    }
+    .questions_container{
+        height: 13vh;
+        width: 100%;
+        align-content: center;
+    }
+    /* Dropdown Button */
+    .dropbtn,.dropbtn2,.dropbtn3,.dropbtn4{
+        height: 8vh;
+        width: 30vw;
+        background-color: #f1f1f1;
+        border-radius: 10px 10px 10px 10px;
+        color: #4a78e7;
+        font-size: 16px;
+        margin-left: 40px;
+        border: none;
+        cursor: pointer;
+    }
+    .dropbtn>i,.dropbtn2>i,.dropbtn3>i,.dropbtn4>i{
+        color: #01447a;
+        font-weight: bold;
+        font-size: 18px;
+        margin-left: 60px;
+    }
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown,.dropdown2,.dropdown3,.dropdown4{
+        display: inline-block;
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content, .dropdown-content2,.dropdown-content3,.dropdown-content4{
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        width: 30vw;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        margin-left: 40px;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content a,.dropdown-content2 a,.dropdown-content3 a,.dropdown-content4 a{
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover ,.dropdown-content2 a:hover{background-color: #ddd;}
+
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
+    .brands{
+        height: 60vh;
+        width: 100%;
+        border: 1px solid;
+        background-image: url("images/car\ parts\ background.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        align-content: center;
+    }
+    .brands_heading{
+        color: white;
+        font-size: 28px;
+        font-weight: 700;
+        text-align: center;
+    }
+    .brands_title{
+        height: 6vh;
+        width: 100%;
+        border: 1px solid white;
+    }
+    .brand_logos{
+        height: 20vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .brand_logos>img{
+        height: 6vh;
+    }
+    footer{
+        height: 56vh;
+        width: 100%;
+        border: 1px solid;
+    }
+    .footer_1{
+        height: 50vh;
+        width: 100%;
+        border: 1px solid #feccaa;
+        background-color: #feccaa;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .footer_div_1{
+        height: 30vh;
+        width: 25vw;
+    }
+    .footer_div_1_title{
+        height: 13vh;
+        border: 1px solid;
+    }
+    .socials{
+        height: 7vh;
+        align-content: center;
+    }
+    .socials>a{
+        width: 3vw;
+        height: 5vh;
+        text-decoration: none;
+        color: black;
+        display: inline-block;
+        border: 1px solid #f97316;
+        text-align: center;
+        align-content: center;
+        border-radius: 15px 15px 15px 15px;
+    }
+    .socials>a:hover{
+        background-color: #f97316;
+    }
+    .footer_links{
+        height: 30vh;
+        width: 11vw;
+    }
+    .footer_links_heading{
+        font-weight: 700;
+    }
+    .footer_links>a{
+        text-decoration: none;
+        color: #01447a;
+        font-weight: 400;
+    }
+    .footer_links>a:hover{
+        color: #f97316;
+        text-decoration: underline 1px solid #f97316;
+    }
+    .contacts{
+        height: 30vh;
+        width: 18vw;
+    }
+    .contacts_heading{
+        font-weight: 700;
+    }
+    .contacts>p{
+        margin-top: 4px;
+    }
+    .footer_2{
+        height: 6vh;
+        width: 100%;
+        background-color: #01447a;
+        text-align: center;
+        color: white;
+        align-content: center;
     }
 }
