--- a/About_us.css
+++ b/About_us.css
@@ -10,7 +10,7 @@ body{
 }
 @media screen and (min-width:1200px){
     header{
-        height: 11vh;
+        height: 10vh;
         width: 100%;
     }
     nav{
@@ -63,13 +63,153 @@ body{
     }
     /* section */
     section{
-        height: 300vh;
+        height: 600vh;
         width: 100%;
         border: 1px solid;
     }
     .main_img_container{
-        height: 80vh;
+        height: 109vh;
         width: 100%;
+    }
+    .main_links{
+        height: 8vh;
+        width: 15vw;
+        align-content: center;
+        text-align: center;
+    }
+    .main_link_1,.main_link_2{
+        text-decoration: none;
+    }
+    .main_link_1{
+        color: #f97316;
+    }
+    .main_link_2{
+        color: #01447a;
+        font-weight: 600;
+    }
+    .main_img{
+        width: 100%;
+        height: 100vh;
+        background-image: url("images/mechanics\ working\ together.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        align-content: center;
+    }
+    .title_1{
+        font-size: 28px;
+        color: white;
+        font-weight: bold;
+        width: 80vw;
+        margin-left: 30px;
+    }
+    .title_2{
+        color: white;
+        height: 30vh;
+        width: 60vw;
+        border: 1px solid white;
+        margin-left: 30px;
+        margin-top: 10px;
+    }
+    .Schedule_appointment{
+        background-color: #f97316;
+        color: white;
+        text-decoration: none;
+        width: 14vw;
+        display: inline-block;
+        text-align: center;
+        height: 6vh;
+        align-content: center;
+        margin-left: 30px;
+        font-size: 13px;
+        border-radius: 5px 5px 5px 5px;
+        margin-top: 20px;
+    }
+    .summary{
+        height: 30vh;
+        width: 100%;
+        background-color: #f6f6f6;
+        display: grid;
+        place-content: center;
+    }
+    .summary>div{
+        height: 20vh;
+        width: 60vw;
+        background-color: white;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .summary_info{
+        height: 15vh;
+        width: 10vw;
+        align-content: center;
+    }
+    .summary_info>p{
+        font-weight: 700;
+        text-align: center;
+    }
+    .summary_info>div{
+        font-size: 14px;
+        text-align: center;
+    }
+    .About_us{
+        height: 300vh;
+        width: 100%;
+        border: 1px solid;
+        display: grid;
+        place-content: center;
+        gap: 10px;
+    }
+    .about_us_sections_1{
+        height: 64vh;
+        width: 97vw;
+        background-color: white;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .about_us_sections_2{
+        height: 120vh;
+        width: 97vw;
+        background-color: white;
+        border: 1px solid;
+        display: grid;
+        place-content: center;
+    }
+    .about_us_sections_1>div{
+        height: 50vh;
+        width: 60vw;
+    }
+    .about_us_sections_1>img{
+        height: 50vh;
+        width: 20vw;
+        border: 1px solid;
+    }
+    .section_1_heading{
+        color: #f97316;
+        font-weight: 600;
+    }
+    .section_title_1{
+        color: #01447a;
+        font-weight: 700;
+        font-size: 18px;
+    }
+    .section_info_1{
+        height: 10vh;
+        width: 100%;
+        border: 1px solid;
+        margin-top: 13px;
+    }
+    .section_2_heading{
+        border: 1px solid black;
+        text-align: center;
+        color: #01447a;
+        font-weight: 700;
+    }
+    .section_2_containers{
+        height: 40vh;
+        width: 80vw;
         border: 1px solid;
     }
 }
