--- a/About_us.css
+++ b/About_us.css
@@ -63,9 +63,8 @@ body{
     }
     /* section */
     section{
-        height: 600vh;
+        height: 439vh;
         width: 100%;
-        border: 1px solid;
     }
     .main_img_container{
         height: 109vh;
@@ -154,9 +153,8 @@ body{
         text-align: center;
     }
     .About_us{
-        height: 300vh;
+        height: 240vh;
         width: 100%;
-        border: 1px solid;
         display: grid;
         place-content: center;
         gap: 10px;
@@ -170,12 +168,12 @@ body{
         align-items: center;
     }
     .about_us_sections_2{
-        height: 120vh;
+        height: 170vh;
         width: 97vw;
         background-color: white;
-        border: 1px solid;
         display: grid;
         place-content: center;
+        gap: 10px;
     }
     .about_us_sections_1>div{
         height: 50vh;
@@ -183,8 +181,7 @@ body{
     }
     .about_us_sections_1>img{
         height: 50vh;
-        width: 20vw;
-        border: 1px solid;
+        width: 24vw;
     }
     .section_1_heading{
         color: #f97316;
@@ -202,14 +199,129 @@ body{
         margin-top: 13px;
     }
     .section_2_heading{
-        border: 1px solid black;
         text-align: center;
         color: #01447a;
         font-weight: 700;
     }
     .section_2_containers{
+        height: 50vh;
+        width: 86vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .section_2_containers>img{
+        height: 44vh;
+        width: 20vw;
+    }
+    .section_2_containers>div{
         height: 40vh;
-        width: 80vw;
+        width: 60vw;
         border: 1px solid;
+    }
+    .brands{
+        height: 60vh;
+        width: 100%;
+        border: 1px solid;
+        background-image: url("images/car\ parts\ background.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        align-content: center;
+    }
+    .brands_heading{
+        color: white;
+        font-size: 28px;
+        font-weight: 700;
+        text-align: center;
+    }
+    .brands_title{
+        height: 6vh;
+        width: 100%;
+        border: 1px solid white;
+    }
+    .brand_logos{
+        height: 20vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .brand_logos>img{
+        height: 6vh;
+    }
+    footer{
+        height: 56vh;
+        width: 100%;
+        border: 1px solid;
+    }
+    .footer_1{
+        height: 50vh;
+        width: 100%;
+        border: 1px solid #feccaa;
+        background-color: #feccaa;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .footer_div_1{
+        height: 30vh;
+        width: 25vw;
+    }
+    .footer_div_1_title{
+        height: 13vh;
+        border: 1px solid;
+    }
+    .socials{
+        height: 7vh;
+        align-content: center;
+    }
+    .socials>a{
+        width: 3vw;
+        height: 5vh;
+        text-decoration: none;
+        color: black;
+        display: inline-block;
+        border: 1px solid #f97316;
+        text-align: center;
+        align-content: center;
+        border-radius: 15px 15px 15px 15px;
+    }
+    .socials>a:hover{
+        background-color: #f97316;
+    }
+    .footer_links{
+        height: 30vh;
+        width: 11vw;
+    }
+    .footer_links_heading{
+        font-weight: 700;
+    }
+    .footer_links>a{
+        text-decoration: none;
+        color: #01447a;
+        font-weight: 400;
+    }
+    .footer_links>a:hover{
+        color: #f97316;
+        text-decoration: underline 1px solid #f97316;
+    }
+    .contacts{
+        height: 30vh;
+        width: 18vw;
+    }
+    .contacts_heading{
+        font-weight: 700;
+    }
+    .contacts>p{
+        margin-top: 4px;
+    }
+    .footer_2{
+        height: 6vh;
+        width: 100%;
+        background-color: #01447a;
+        text-align: center;
+        color: white;
+        align-content: center;
     }
 }
