--- a/services.css
+++ b/services.css
@@ -62,8 +62,13 @@ body{
         display: grid;
         place-content: center;
     }
-        .main_img_container{
-        height: 109vh;
+    section{
+        height: 300vh;
+        width: 100%;
+        border: 1px solid;
+    }
+    .main_img_container{
+        height: 108vh;
         width: 100%;
     }
     .main_links{
@@ -85,7 +90,7 @@ body{
     .main_img{
         width: 100%;
         height: 100vh;
-        background-image: url("images/mechanics\ working\ together.png");
+        background-image: url("images/services\ page\ mechanic\ fixing\ a\ car.png");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -100,7 +105,7 @@ body{
     }
     .title_2{
         color: white;
-        height: 30vh;
+        height: 10vh;
         width: 60vw;
         border: 1px solid white;
         margin-left: 30px;
@@ -119,5 +124,92 @@ body{
         font-size: 13px;
         border-radius: 5px 5px 5px 5px;
         margin-top: 20px;
+    }
+    .Bumper_div{
+        height: 80vh;
+        width: 100%;
+        border: 1px solid;
+        display: grid;
+        place-content: center;
+    }
+    .Bumper_div>div{
+        height: 70vh;
+        width: 85vw;
+        border: 1px solid;
+        background-color: white;
+    }
+     footer{
+        height: 56vh;
+        width: 100%;
+        border: 1px solid;
+    }
+    .footer_1{
+        height: 50vh;
+        width: 100%;
+        border: 1px solid #feccaa;
+        background-color: #feccaa;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .footer_div_1{
+        height: 30vh;
+        width: 25vw;
+    }
+    .footer_div_1_title{
+        height: 13vh;
+        border: 1px solid;
+    }
+    .socials{
+        height: 7vh;
+        align-content: center;
+    }
+    .socials>a{
+        width: 3vw;
+        height: 5vh;
+        text-decoration: none;
+        color: black;
+        display: inline-block;
+        border: 1px solid #f97316;
+        text-align: center;
+        align-content: center;
+        border-radius: 15px 15px 15px 15px;
+    }
+    .socials>a:hover{
+        background-color: #f97316;
+    }
+    .footer_links{
+        height: 30vh;
+        width: 11vw;
+    }
+    .footer_links_heading{
+        font-weight: 700;
+    }
+    .footer_links>a{
+        text-decoration: none;
+        color: #01447a;
+        font-weight: 400;
+    }
+    .footer_links>a:hover{
+        color: #f97316;
+        text-decoration: underline 1px solid #f97316;
+    }
+    .contacts{
+        height: 30vh;
+        width: 18vw;
+    }
+    .contacts_heading{
+        font-weight: 700;
+    }
+    .contacts>p{
+        margin-top: 4px;
+    }
+    .footer_2{
+        height: 6vh;
+        width: 100%;
+        background-color: #01447a;
+        text-align: center;
+        color: white;
+        align-content: center;
     }
 }
