--- a/services.css
+++ b/services.css
@@ -63,9 +63,8 @@ body{
         place-content: center;
     }
     section{
-        height: 300vh;
+        height: 468vh;
         width: 100%;
-        border: 1px solid;
     }
     .main_img_container{
         height: 108vh;
@@ -125,23 +124,243 @@ body{
         border-radius: 5px 5px 5px 5px;
         margin-top: 20px;
     }
-    .Bumper_div{
+    .wheel_div{
         height: 80vh;
         width: 100%;
-        border: 1px solid;
         display: grid;
         place-content: center;
     }
-    .Bumper_div>div{
+    .wheel_div>div{
         height: 70vh;
         width: 85vw;
-        border: 1px solid;
         background-color: white;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
     }
-     footer{
-        height: 56vh;
+    .wheel_info_div{
+        height: 60vh;
+        width: 40vw;
+    }
+    .wheel_info_heading{
+        color: #01447a;
+        font-size: 20px;
+        font-weight: 800;
+    }
+    .wheel_info{
+        height: 30vh;
         width: 100%;
         border: 1px solid;
+        margin-top: 10px;
+    }
+    .wheel_img{
+        height: 50vh;
+        width: 30vw;
+
+    }
+    .Schedule_appointment2{
+        background-color: #f97316;
+        color: white;
+        text-decoration: none;
+        width: 14vw;
+        display: inline-block;
+        text-align: center;
+        height: 6vh;
+        align-content: center;
+        font-size: 13px;
+        border-radius: 5px 5px 5px 5px;
+        margin-top: 10px;
+    }
+    .why_choose_us{
+        height: 80vh;
+        width: 100%;
+        display: grid;
+        place-content: center;
+    }
+    .why_choose_us>div{
+        height: 80vh;
+        width: 94vw;
+        background-image: url("images/services\ page\ why\ chose\ background\ image.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: grid;
+        place-content: center;
+    }
+    .why_choose_heading{
+        height: 6vh;
+        color: #01447a;
+        text-align: center;
+        font-weight: 700;
+        font-size: 20px;
+        align-content: center;
+    }
+    .why_choose_title{
+        height: 6vh;
+        border: 1px solid;
+    }
+    .why_info_div{
+        height: 65vh;
+        width: 85vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .why_info_div>div{
+        height: 60vh;
+        width: 35vw;
+        border: 1px solid;
+    }
+    .service_approach{
+        height: 60vh;
+        width: 100%;
+        display: grid;
+        place-content: center;
+    }
+    .service_approach>div{
+        height: 55vh;
+        width: 94vw;
+        background-color: white;
+        display: grid;
+        place-content: center;
+    }
+    .service_approach_heading{
+        color: #01447a;
+        font-weight: 700;
+        font-size: 20px;
+        text-align: center;
+    }
+    .approach_steps{
+        height: 10vh;
+        width: 60vw;
+        border: 1px solid;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .approach_steps>a{
+        text-decoration: none;
+        color: white;
+        background-color: #f97316;
+        display: inline-block;
+        height: 4vh;
+        width: 1.8vw;
+        border: none;
+        border-radius: 13px 13px 13px 13px;
+        text-align: center;
+    }
+    .Approaches{
+        height: 20vh;
+        width: 60vw;
+        border: 1px solid; 
+    }
+    .questions{
+        height: 80vh;
+        width: 100%;
+        display: grid;
+        place-content: center;
+    }
+    .questions_img{
+        height: 76vh;
+        width: 97vw;
+        background-image: url("images/questions.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        align-content: center;
+    }
+    .questions_heading{
+        text-align: center;
+        font-weight: 700;
+        color: #01447a;
+        font-size: 24px;
+    }
+    .questions_container{
+        height: 13vh;
+        width: 100%;
+        align-content: center;
+    }
+    /* Dropdown Button */
+    .dropbtn,.dropbtn2,.dropbtn3,.dropbtn4{
+        height: 8vh;
+        width: 30vw;
+        background-color: #f1f1f1;
+        border-radius: 10px 10px 10px 10px;
+        color: #4a78e7;
+        font-size: 16px;
+        margin-left: 40px;
+        border: none;
+        cursor: pointer;
+    }
+    .dropbtn>i,.dropbtn2>i,.dropbtn3>i,.dropbtn4>i{
+        color: #01447a;
+        font-weight: bold;
+        font-size: 18px;
+        margin-left: 60px;
+    }
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown,.dropdown2,.dropdown3,.dropdown4{
+        display: inline-block;
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content, .dropdown-content2,.dropdown-content3,.dropdown-content4{
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        width: 30vw;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        margin-left: 40px;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content a,.dropdown-content2 a,.dropdown-content3 a,.dropdown-content4 a{
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover ,.dropdown-content2 a:hover{background-color: #ddd;}
+
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
+    .brands{
+        height: 60vh;
+        width: 100%;
+        border: 1px solid;
+        background-image: url("images/car\ parts\ background.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        align-content: center;
+    }
+    .brands_heading{
+        color: white;
+        font-size: 28px;
+        font-weight: 700;
+        text-align: center;
+    }
+    .brands_title{
+        height: 6vh;
+        width: 100%;
+        border: 1px solid white;
+    }
+    .brand_logos{
+        height: 20vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .brand_logos>img{
+        height: 6vh;
+    }
+    footer{
+        height: 56vh;
+        width: 100%;
     }
     .footer_1{
         height: 50vh;
